src/languages/common/generated/CommonParser.ts
// Generated from C:\Users\HORUS\Desktop\tcc\src\languages\common\CommonParser.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { CommonParserVisitor } from "./CommonParserVisitor";


export class CommonParser extends Parser {
	public static readonly TEXT_CONTENT = 1;
	public static readonly TRUE = 2;
	public static readonly FALSE = 3;
	public static readonly BREAK = 4;
	public static readonly CONSTANT = 5;
	public static readonly CONTINUE = 6;
	public static readonly ELSE = 7;
	public static readonly END = 8;
	public static readonly FOR = 9;
	public static readonly FOREVER = 10;
	public static readonly FROM = 11;
	public static readonly FUNCTION = 12;
	public static readonly GLOBAL = 13;
	public static readonly IF = 14;
	public static readonly RETURN = 15;
	public static readonly RETURNS = 16;
	public static readonly TO = 17;
	public static readonly WHILE = 18;
	public static readonly ASSIGN = 19;
	public static readonly ADD = 20;
	public static readonly SUBTRACT = 21;
	public static readonly MULTIPLY = 22;
	public static readonly DIVIDE = 23;
	public static readonly REMAINDER = 24;
	public static readonly POWER = 25;
	public static readonly ADD_ASSIGN = 26;
	public static readonly SUBTRACT_ASSIGN = 27;
	public static readonly MULTIPLY_ASSIGN = 28;
	public static readonly DIVIDE_ASSIGN = 29;
	public static readonly REMAINDER_ASSIGN = 30;
	public static readonly POWER_ASSIGN = 31;
	public static readonly LESS = 32;
	public static readonly LESS_OR_EQUAL = 33;
	public static readonly GREATER = 34;
	public static readonly GREATER_OR_EQUAL = 35;
	public static readonly EQUAL = 36;
	public static readonly DIFFERENT = 37;
	public static readonly AND = 38;
	public static readonly OR = 39;
	public static readonly NOT = 40;
	public static readonly LOGICAL = 41;
	public static readonly NUMBER = 42;
	public static readonly TEXT = 43;
	public static readonly OPEN_PARENTHESIS = 44;
	public static readonly CLOSE_PARENTHESIS = 45;
	public static readonly OPEN_BRACKET = 46;
	public static readonly CLOSE_BRACKET = 47;
	public static readonly OPEN_BRACE = 48;
	public static readonly CLOSE_BRACE = 49;
	public static readonly DOT = 50;
	public static readonly COMMA = 51;
	public static readonly QUOTE_SINGLE = 52;
	public static readonly QUOTE_DOUBLE = 53;
	public static readonly IDENTIFIER = 54;
	public static readonly DECIMAL_NUMBER = 55;
	public static readonly HEX_NUMBER = 56;
	public static readonly BINARY_NUMBER = 57;
	public static readonly NEWLINE = 58;
	public static readonly WHITESPACE = 59;
	public static readonly LINE_COMMENT = 60;
	public static readonly BLOCK_COMMENT = 61;
	public static readonly UNKNOWN = 62;
	public static readonly SINGLE_QUOTE_NEWLINE = 63;
	public static readonly DOUBLE_QUOTE_NEWLINE = 64;
	public static readonly RULE_program = 0;
	public static readonly RULE_topStatement = 1;
	public static readonly RULE_innerStatement = 2;
	public static readonly RULE_statement = 3;
	public static readonly RULE_globalStatement = 4;
	public static readonly RULE_functionDeclaration = 5;
	public static readonly RULE_parameterList = 6;
	public static readonly RULE_variableDeclaration = 7;
	public static readonly RULE_type = 8;
	public static readonly RULE_expression = 9;
	public static readonly RULE_atom = 10;
	public static readonly RULE_numberLiteral = 11;
	public static readonly RULE_textLiteral = 12;
	public static readonly RULE_interpolatedText = 13;
	public static readonly RULE_functionCall = 14;
	public static readonly RULE_argumentList = 15;
	public static readonly RULE_variableAssignment = 16;
	public static readonly RULE_ifStatement = 17;
	public static readonly RULE_elseIfPart = 18;
	public static readonly RULE_elsePart = 19;
	public static readonly RULE_forFromToStatement = 20;
	public static readonly RULE_whileStatement = 21;
	public static readonly RULE_foreverStatement = 22;
	public static readonly RULE_breakStatement = 23;
	public static readonly RULE_continueStatement = 24;
	public static readonly RULE_returnStatement = 25;
	public static readonly RULE_eos = 26;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"program", "topStatement", "innerStatement", "statement", "globalStatement", 
		"functionDeclaration", "parameterList", "variableDeclaration", "type", 
		"expression", "atom", "numberLiteral", "textLiteral", "interpolatedText", 
		"functionCall", "argumentList", "variableAssignment", "ifStatement", "elseIfPart", 
		"elsePart", "forFromToStatement", "whileStatement", "foreverStatement", 
		"breakStatement", "continueStatement", "returnStatement", "eos",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, undefined, "'true'", "'false'", "'break'", "'constant'", "'continue'", 
		"'else'", "'end'", "'for'", "'forever'", "'from'", "'function'", "'global'", 
		"'if'", "'return'", "'returns'", "'to'", "'while'", "'='", "'+'", "'-'", 
		"'*'", "'/'", "'%'", "'^'", "'+='", "'-='", "'*='", "'/='", "'%='", "'^='", 
		"'<'", "'<='", "'>'", "'>='", "'=='", "'!='", undefined, undefined, undefined, 
		"'logical'", "'number'", "'text'", "'('", "')'", "'['", "']'", "'{'", 
		"'}'", "'.'", "','",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, "TEXT_CONTENT", "TRUE", "FALSE", "BREAK", "CONSTANT", "CONTINUE", 
		"ELSE", "END", "FOR", "FOREVER", "FROM", "FUNCTION", "GLOBAL", "IF", "RETURN", 
		"RETURNS", "TO", "WHILE", "ASSIGN", "ADD", "SUBTRACT", "MULTIPLY", "DIVIDE", 
		"REMAINDER", "POWER", "ADD_ASSIGN", "SUBTRACT_ASSIGN", "MULTIPLY_ASSIGN", 
		"DIVIDE_ASSIGN", "REMAINDER_ASSIGN", "POWER_ASSIGN", "LESS", "LESS_OR_EQUAL", 
		"GREATER", "GREATER_OR_EQUAL", "EQUAL", "DIFFERENT", "AND", "OR", "NOT", 
		"LOGICAL", "NUMBER", "TEXT", "OPEN_PARENTHESIS", "CLOSE_PARENTHESIS", 
		"OPEN_BRACKET", "CLOSE_BRACKET", "OPEN_BRACE", "CLOSE_BRACE", "DOT", "COMMA", 
		"QUOTE_SINGLE", "QUOTE_DOUBLE", "IDENTIFIER", "DECIMAL_NUMBER", "HEX_NUMBER", 
		"BINARY_NUMBER", "NEWLINE", "WHITESPACE", "LINE_COMMENT", "BLOCK_COMMENT", 
		"UNKNOWN", "SINGLE_QUOTE_NEWLINE", "DOUBLE_QUOTE_NEWLINE",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(CommonParser._LITERAL_NAMES, CommonParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return CommonParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "CommonParser.g4"; }

	// @Override
	public get ruleNames(): string[] { return CommonParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return CommonParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(CommonParser._ATN, this);
	}
	// @RuleVersion(0)
	public program(): ProgramContext {
		let _localctx: ProgramContext = new ProgramContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, CommonParser.RULE_program);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 57;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === CommonParser.NEWLINE) {
				{
				{
				this.state = 54;
				this.match(CommonParser.NEWLINE);
				}
				}
				this.state = 59;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 63;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << CommonParser.CONSTANT) | (1 << CommonParser.FOR) | (1 << CommonParser.FOREVER) | (1 << CommonParser.FUNCTION) | (1 << CommonParser.IF) | (1 << CommonParser.WHILE))) !== 0) || ((((_la - 41)) & ~0x1F) === 0 && ((1 << (_la - 41)) & ((1 << (CommonParser.LOGICAL - 41)) | (1 << (CommonParser.NUMBER - 41)) | (1 << (CommonParser.TEXT - 41)) | (1 << (CommonParser.IDENTIFIER - 41)))) !== 0)) {
				{
				{
				this.state = 60;
				this.topStatement();
				}
				}
				this.state = 65;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public topStatement(): TopStatementContext {
		let _localctx: TopStatementContext = new TopStatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, CommonParser.RULE_topStatement);
		try {
			this.state = 70;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case CommonParser.FUNCTION:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 66;
				this.functionDeclaration();
				this.state = 67;
				this.eos();
				}
				break;
			case CommonParser.CONSTANT:
			case CommonParser.FOR:
			case CommonParser.FOREVER:
			case CommonParser.IF:
			case CommonParser.WHILE:
			case CommonParser.LOGICAL:
			case CommonParser.NUMBER:
			case CommonParser.TEXT:
			case CommonParser.IDENTIFIER:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 69;
				this.statement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public innerStatement(): InnerStatementContext {
		let _localctx: InnerStatementContext = new InnerStatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, CommonParser.RULE_innerStatement);
		try {
			this.state = 85;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case CommonParser.GLOBAL:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 72;
				this.globalStatement();
				this.state = 73;
				this.eos();
				}
				break;
			case CommonParser.BREAK:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 75;
				this.breakStatement();
				this.state = 76;
				this.eos();
				}
				break;
			case CommonParser.CONTINUE:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 78;
				this.continueStatement();
				this.state = 79;
				this.eos();
				}
				break;
			case CommonParser.RETURN:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 81;
				this.returnStatement();
				this.state = 82;
				this.eos();
				}
				break;
			case CommonParser.CONSTANT:
			case CommonParser.FOR:
			case CommonParser.FOREVER:
			case CommonParser.IF:
			case CommonParser.WHILE:
			case CommonParser.LOGICAL:
			case CommonParser.NUMBER:
			case CommonParser.TEXT:
			case CommonParser.IDENTIFIER:
				this.enterOuterAlt(_localctx, 5);
				{
				this.state = 84;
				this.statement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public statement(): StatementContext {
		let _localctx: StatementContext = new StatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, CommonParser.RULE_statement);
		try {
			this.state = 108;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 4, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 87;
				this.variableDeclaration();
				this.state = 88;
				this.eos();
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 90;
				this.variableAssignment();
				this.state = 91;
				this.eos();
				}
				break;

			case 3:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 93;
				this.ifStatement();
				this.state = 94;
				this.eos();
				}
				break;

			case 4:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 96;
				this.forFromToStatement();
				this.state = 97;
				this.eos();
				}
				break;

			case 5:
				this.enterOuterAlt(_localctx, 5);
				{
				this.state = 99;
				this.whileStatement();
				this.state = 100;
				this.eos();
				}
				break;

			case 6:
				this.enterOuterAlt(_localctx, 6);
				{
				this.state = 102;
				this.foreverStatement();
				this.state = 103;
				this.eos();
				}
				break;

			case 7:
				this.enterOuterAlt(_localctx, 7);
				{
				this.state = 105;
				this.functionCall();
				this.state = 106;
				this.eos();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public globalStatement(): GlobalStatementContext {
		let _localctx: GlobalStatementContext = new GlobalStatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, CommonParser.RULE_globalStatement);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 110;
			this.match(CommonParser.GLOBAL);
			this.state = 111;
			this.match(CommonParser.IDENTIFIER);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public functionDeclaration(): FunctionDeclarationContext {
		let _localctx: FunctionDeclarationContext = new FunctionDeclarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, CommonParser.RULE_functionDeclaration);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 113;
			this.match(CommonParser.FUNCTION);
			this.state = 114;
			this.match(CommonParser.IDENTIFIER);
			this.state = 115;
			this.match(CommonParser.OPEN_PARENTHESIS);
			this.state = 117;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (((((_la - 41)) & ~0x1F) === 0 && ((1 << (_la - 41)) & ((1 << (CommonParser.LOGICAL - 41)) | (1 << (CommonParser.NUMBER - 41)) | (1 << (CommonParser.TEXT - 41)))) !== 0)) {
				{
				this.state = 116;
				this.parameterList();
				}
			}

			this.state = 119;
			this.match(CommonParser.CLOSE_PARENTHESIS);
			this.state = 122;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === CommonParser.RETURNS) {
				{
				this.state = 120;
				this.match(CommonParser.RETURNS);
				this.state = 121;
				this.type();
				}
			}

			this.state = 125;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 124;
				this.match(CommonParser.NEWLINE);
				}
				}
				this.state = 127;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while (_la === CommonParser.NEWLINE);
			this.state = 132;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << CommonParser.BREAK) | (1 << CommonParser.CONSTANT) | (1 << CommonParser.CONTINUE) | (1 << CommonParser.FOR) | (1 << CommonParser.FOREVER) | (1 << CommonParser.GLOBAL) | (1 << CommonParser.IF) | (1 << CommonParser.RETURN) | (1 << CommonParser.WHILE))) !== 0) || ((((_la - 41)) & ~0x1F) === 0 && ((1 << (_la - 41)) & ((1 << (CommonParser.LOGICAL - 41)) | (1 << (CommonParser.NUMBER - 41)) | (1 << (CommonParser.TEXT - 41)) | (1 << (CommonParser.IDENTIFIER - 41)))) !== 0)) {
				{
				{
				this.state = 129;
				this.innerStatement();
				}
				}
				this.state = 134;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 135;
			this.match(CommonParser.END);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public parameterList(): ParameterListContext {
		let _localctx: ParameterListContext = new ParameterListContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, CommonParser.RULE_parameterList);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 137;
			this.type();
			this.state = 138;
			this.match(CommonParser.IDENTIFIER);
			this.state = 145;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === CommonParser.COMMA) {
				{
				{
				this.state = 139;
				this.match(CommonParser.COMMA);
				this.state = 140;
				this.type();
				this.state = 141;
				this.match(CommonParser.IDENTIFIER);
				}
				}
				this.state = 147;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public variableDeclaration(): VariableDeclarationContext {
		let _localctx: VariableDeclarationContext = new VariableDeclarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, CommonParser.RULE_variableDeclaration);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 149;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === CommonParser.CONSTANT) {
				{
				this.state = 148;
				this.match(CommonParser.CONSTANT);
				}
			}

			this.state = 151;
			this.type();
			this.state = 152;
			this.match(CommonParser.IDENTIFIER);
			this.state = 153;
			this.match(CommonParser.ASSIGN);
			this.state = 154;
			this.expression(0);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public type(): TypeContext {
		let _localctx: TypeContext = new TypeContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, CommonParser.RULE_type);
		try {
			this.state = 159;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case CommonParser.LOGICAL:
				_localctx = new LogicalTypeContext(_localctx);
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 156;
				this.match(CommonParser.LOGICAL);
				}
				break;
			case CommonParser.NUMBER:
				_localctx = new NumberTypeContext(_localctx);
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 157;
				this.match(CommonParser.NUMBER);
				}
				break;
			case CommonParser.TEXT:
				_localctx = new TextTypeContext(_localctx);
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 158;
				this.match(CommonParser.TEXT);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}

	public expression(): ExpressionContext;
	public expression(_p: number): ExpressionContext;
	// @RuleVersion(0)
	public expression(_p?: number): ExpressionContext {
		if (_p === undefined) {
			_p = 0;
		}

		let _parentctx: ParserRuleContext = this._ctx;
		let _parentState: number = this.state;
		let _localctx: ExpressionContext = new ExpressionContext(this._ctx, _parentState);
		let _prevctx: ExpressionContext = _localctx;
		let _startState: number = 18;
		this.enterRecursionRule(_localctx, 18, CommonParser.RULE_expression, _p);
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 173;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case CommonParser.OPEN_PARENTHESIS:
				{
				_localctx = new ParenthesisExpressionContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;

				this.state = 162;
				this.match(CommonParser.OPEN_PARENTHESIS);
				this.state = 163;
				this.expression(0);
				this.state = 164;
				this.match(CommonParser.CLOSE_PARENTHESIS);
				}
				break;
			case CommonParser.ADD:
				{
				_localctx = new PlusExpressionContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 166;
				this.match(CommonParser.ADD);
				this.state = 167;
				this.expression(18);
				}
				break;
			case CommonParser.SUBTRACT:
				{
				_localctx = new MinusExpressionContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 168;
				this.match(CommonParser.SUBTRACT);
				this.state = 169;
				this.expression(17);
				}
				break;
			case CommonParser.NOT:
				{
				_localctx = new NotExpressionContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 170;
				this.match(CommonParser.NOT);
				this.state = 171;
				this.expression(16);
				}
				break;
			case CommonParser.TRUE:
			case CommonParser.FALSE:
			case CommonParser.QUOTE_SINGLE:
			case CommonParser.QUOTE_DOUBLE:
			case CommonParser.IDENTIFIER:
			case CommonParser.DECIMAL_NUMBER:
			case CommonParser.HEX_NUMBER:
			case CommonParser.BINARY_NUMBER:
				{
				_localctx = new AtomExpressionContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 172;
				this.atom();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			this._ctx._stop = this._input.tryLT(-1);
			this.state = 219;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 14, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					if (this._parseListeners != null) {
						this.triggerExitRuleEvent();
					}
					_prevctx = _localctx;
					{
					this.state = 217;
					this._errHandler.sync(this);
					switch ( this.interpreter.adaptivePredict(this._input, 13, this._ctx) ) {
					case 1:
						{
						_localctx = new PowerExpressionContext(new ExpressionContext(_parentctx, _parentState));
						this.pushNewRecursionContext(_localctx, _startState, CommonParser.RULE_expression);
						this.state = 175;
						if (!(this.precpred(this._ctx, 15))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 15)");
						}
						this.state = 176;
						this.match(CommonParser.POWER);
						this.state = 177;
						this.expression(15);
						}
						break;

					case 2:
						{
						_localctx = new MultiplyExpressionContext(new ExpressionContext(_parentctx, _parentState));
						this.pushNewRecursionContext(_localctx, _startState, CommonParser.RULE_expression);
						this.state = 178;
						if (!(this.precpred(this._ctx, 14))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 14)");
						}
						this.state = 179;
						this.match(CommonParser.MULTIPLY);
						this.state = 180;
						this.expression(15);
						}
						break;

					case 3:
						{
						_localctx = new DivideExpressionContext(new ExpressionContext(_parentctx, _parentState));
						this.pushNewRecursionContext(_localctx, _startState, CommonParser.RULE_expression);
						this.state = 181;
						if (!(this.precpred(this._ctx, 13))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 13)");
						}
						this.state = 182;
						this.match(CommonParser.DIVIDE);
						this.state = 183;
						this.expression(14);
						}
						break;

					case 4:
						{
						_localctx = new RemainderExpressionContext(new ExpressionContext(_parentctx, _parentState));
						this.pushNewRecursionContext(_localctx, _startState, CommonParser.RULE_expression);
						this.state = 184;
						if (!(this.precpred(this._ctx, 12))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 12)");
						}
						this.state = 185;
						this.match(CommonParser.REMAINDER);
						this.state = 186;
						this.expression(13);
						}
						break;

					case 5:
						{
						_localctx = new AddExpressionContext(new ExpressionContext(_parentctx, _parentState));
						this.pushNewRecursionContext(_localctx, _startState, CommonParser.RULE_expression);
						this.state = 187;
						if (!(this.precpred(this._ctx, 11))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 11)");
						}
						this.state = 188;
						this.match(CommonParser.ADD);
						this.state = 189;
						this.expression(12);
						}
						break;

					case 6:
						{
						_localctx = new SubtractExpressionContext(new ExpressionContext(_parentctx, _parentState));
						this.pushNewRecursionContext(_localctx, _startState, CommonParser.RULE_expression);
						this.state = 190;
						if (!(this.precpred(this._ctx, 10))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 10)");
						}
						this.state = 191;
						this.match(CommonParser.SUBTRACT);
						this.state = 192;
						this.expression(11);
						}
						break;

					case 7:
						{
						_localctx = new LessExpressionContext(new ExpressionContext(_parentctx, _parentState));
						this.pushNewRecursionContext(_localctx, _startState, CommonParser.RULE_expression);
						this.state = 193;
						if (!(this.precpred(this._ctx, 9))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 9)");
						}
						this.state = 194;
						this.match(CommonParser.LESS);
						this.state = 195;
						this.expression(10);
						}
						break;

					case 8:
						{
						_localctx = new LessEqualExpressionContext(new ExpressionContext(_parentctx, _parentState));
						this.pushNewRecursionContext(_localctx, _startState, CommonParser.RULE_expression);
						this.state = 196;
						if (!(this.precpred(this._ctx, 8))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 8)");
						}
						this.state = 197;
						this.match(CommonParser.LESS_OR_EQUAL);
						this.state = 198;
						this.expression(9);
						}
						break;
